[metadata]
name = asl
version = 1.0.2
description = Bindings to the ASL library on Mac OS X
long_description_file = README.txt doc/changelog.rst
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Environment :: MacOS X
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Development Status :: 4 - Beta

author = Ronald Oussoren
author_email = ronaldoussoren@mac.com
maintainer = Ronald Oussoren
maintainer_email = ronaldoussoren@mac.com
url = http://pythonhosted.org/asl/
download_url = http://pypi.python.org/pypi/asl
packages = asl
license = MIT
platforms = Mac OS X
ext_modules = asl._asl

[Extension:asl._asl]
source = _asl.c
